saved numpy array for mL algos

--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -852,16 +852,16 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.00394714,  0.00350176,  0.00074571, -0.00575614, -0.0049629 ,\n",
-       "        0.00911527, -0.00103758,  0.00044747, -0.00443799, -0.00789101,\n",
-       "       -0.00447354, -0.00715249, -0.00310215, -0.00353015,  0.00772409,\n",
-       "        0.00361738, -0.00357419,  0.00749608,  0.00710761,  0.00255838,\n",
-       "        0.00020287,  0.0082861 , -0.00993253,  0.00979875, -0.00078083,\n",
-       "       -0.00428344, -0.00329814,  0.00984489,  0.00235699,  0.00837413,\n",
-       "        0.00577807, -0.00928916,  0.00741222,  0.00509363, -0.00231159,\n",
-       "        0.0030742 , -0.00525812,  0.00714865,  0.00926889,  0.00881244,\n",
-       "        0.00876064, -0.00493334,  0.00755112,  0.00391145, -0.00119294,\n",
-       "        0.00222101, -0.00472135, -0.00559999,  0.00249157,  0.00092713],\n",
+       "array([ 0.00698747, -0.00989458,  0.00629319, -0.00305483, -0.00882803,\n",
+       "       -0.00981694, -0.00609471,  0.00091188, -0.00429309,  0.00350596,\n",
+       "       -0.00705958, -0.00544115, -0.00185358,  0.00993089, -0.00651131,\n",
+       "       -0.00834236, -0.00393341, -0.00191398, -0.0014376 ,  0.00206255,\n",
+       "       -0.00547027, -0.00668457,  0.00234277,  0.00264166, -0.00700368,\n",
+       "       -0.00044164,  0.00471694, -0.00593301, -0.00093206, -0.00882479,\n",
+       "        0.00597474, -0.00671967,  0.00854737,  0.00911713, -0.00578616,\n",
+       "       -0.00451044,  0.00608086,  0.00760688, -0.0044637 ,  0.00612483,\n",
+       "        0.00750832,  0.00528153, -0.00361242, -0.00058244, -0.00948951,\n",
+       "        0.00197906,  0.00538405,  0.00370634, -0.00084229, -0.00413783],\n",
        "      dtype=float32)"
       ]
      },
@@ -1137,62 +1137,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "original_arrays = [feature_array_unigram, feature_array_bigram, feature_array_tfidf, feature_array_word2vec]\n",
     "reduced_arrays = [reduced_unigram, reduced_bigram, reduced_tfidf]\n",
     "\n",
-    "orginal_file_names = [\"feature_array_unigram\", \"feature_array_bigram\", \"feature_array_tfidf\", \"feature_array_word2vec\"]\n",
+    "original_file_names = [\"feature_array_unigram\", \"feature_array_bigram\", \"feature_array_tfidf\", \"feature_array_word2vec\"]\n",
     "reduced_file_names = [\"reduced_unigram\", \"reduced_bigram\", \"reduced_tfidf\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.mkdir('nlp_data')\n",
     "def saveFile(file, array):\n",
-    "    filename = file + \".npy\"\n",
+    "    filename = 'nlp_data/' + file + \".npy\"\n",
     "    np.save(filename, array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(0, 4):\n",
+    "    saveFile(original_file_names[i], original_arrays[i])\n",
+    "for i in range(0, 3):\n",
+    "    saveFile(reduced_file_names[i], reduced_arrays[i])"
+   ]
   },
   {
    "cell_type": "code",
