--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -852,17 +852,19 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.00698747, -0.00989458,  0.00629319, -0.00305483, -0.00882803,\n",
-       "       -0.00981694, -0.00609471,  0.00091188, -0.00429309,  0.00350596,\n",
-       "       -0.00705958, -0.00544115, -0.00185358,  0.00993089, -0.00651131,\n",
-       "       -0.00834236, -0.00393341, -0.00191398, -0.0014376 ,  0.00206255,\n",
-       "       -0.00547027, -0.00668457,  0.00234277,  0.00264166, -0.00700368,\n",
-       "       -0.00044164,  0.00471694, -0.00593301, -0.00093206, -0.00882479,\n",
-       "        0.00597474, -0.00671967,  0.00854737,  0.00911713, -0.00578616,\n",
-       "       -0.00451044,  0.00608086,  0.00760688, -0.0044637 ,  0.00612483,\n",
-       "        0.00750832,  0.00528153, -0.00361242, -0.00058244, -0.00948951,\n",
-       "        0.00197906,  0.00538405,  0.00370634, -0.00084229, -0.00413783],\n",
-       "      dtype=float32)"
+       "array([-4.43396112e-03, -2.54269550e-03,  7.00723380e-03,  8.08888674e-03,\n",
+       "        3.16247533e-05, -4.82726755e-04,  1.73275487e-03,  2.82224594e-03,\n",
+       "       -2.88812141e-03, -8.00887588e-03, -1.98123635e-05, -1.18029195e-04,\n",
+       "       -3.71856964e-03, -7.81522971e-03,  5.17386058e-03,  9.99253057e-03,\n",
+       "        5.79231838e-03,  3.17400810e-03,  3.28756822e-03,  5.18198730e-03,\n",
+       "       -7.56954215e-03, -4.03050100e-03, -3.44990497e-03, -8.64933172e-05,\n",
+       "       -5.01059555e-03, -5.39983064e-03,  7.92337582e-03, -8.62863101e-03,\n",
+       "       -2.41284887e-03, -6.31021289e-03,  7.85663142e-04,  6.06333790e-03,\n",
+       "        5.63596841e-03, -2.21588486e-03,  9.00863577e-03, -2.16392591e-03,\n",
+       "        4.32983274e-03,  6.00302266e-03,  4.07031883e-04,  9.23986267e-03,\n",
+       "       -6.01523556e-03,  9.42547806e-03, -6.78810105e-03, -4.02930984e-03,\n",
+       "       -1.23974786e-03,  3.81971383e-03, -1.29524095e-03,  6.28382666e-03,\n",
+       "        7.76677998e-03, -6.41502626e-03], dtype=float32)"
       ]
      },
      "execution_count": 44,
@@ -1173,11 +1175,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Binary Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Switch from Multiclass to Binary Classification"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "multiClass = [2]\n",
+    "binaryClass = [1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"tweet_class\"] = data[\"tweet_class\"].replace(multiClass, binaryClass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>tweet_class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>warn penni board make faggot</td>\n",
+       "      <td>0.6013</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fuck dyke</td>\n",
+       "      <td>0.7227</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[@] [@] [@] [@] [@] least look like jefre star...</td>\n",
+       "      <td>0.5229</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[@] [@] [@] fag jacki jealou neeeee</td>\n",
+       "      <td>0.5184</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[@] heard bitch way back th texa wtf talk bitc...</td>\n",
+       "      <td>0.5185</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          tweet_text  confidence  tweet_class\n",
+       "0                       warn penni board make faggot      0.6013            1\n",
+       "1                                          fuck dyke      0.7227            1\n",
+       "2  [@] [@] [@] [@] [@] least look like jefre star...      0.5229            1\n",
+       "3                [@] [@] [@] fag jacki jealou neeeee      0.5184            1\n",
+       "4  [@] heard bitch way back th texa wtf talk bitc...      0.5185            1"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_csv_filename = \"/binary_classification.csv\"\n",
+    "filepath = path + new_csv_filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(filepath, index = None, header = True)"
+   ]
   }
  ],
  "metadata": {
