saved labels as numpy array

--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -852,19 +852,17 @@
     {
      "data": {
       "text/plain": [
-       "array([-4.43396112e-03, -2.54269550e-03,  7.00723380e-03,  8.08888674e-03,\n",
-       "        3.16247533e-05, -4.82726755e-04,  1.73275487e-03,  2.82224594e-03,\n",
-       "       -2.88812141e-03, -8.00887588e-03, -1.98123635e-05, -1.18029195e-04,\n",
-       "       -3.71856964e-03, -7.81522971e-03,  5.17386058e-03,  9.99253057e-03,\n",
-       "        5.79231838e-03,  3.17400810e-03,  3.28756822e-03,  5.18198730e-03,\n",
-       "       -7.56954215e-03, -4.03050100e-03, -3.44990497e-03, -8.64933172e-05,\n",
-       "       -5.01059555e-03, -5.39983064e-03,  7.92337582e-03, -8.62863101e-03,\n",
-       "       -2.41284887e-03, -6.31021289e-03,  7.85663142e-04,  6.06333790e-03,\n",
-       "        5.63596841e-03, -2.21588486e-03,  9.00863577e-03, -2.16392591e-03,\n",
-       "        4.32983274e-03,  6.00302266e-03,  4.07031883e-04,  9.23986267e-03,\n",
-       "       -6.01523556e-03,  9.42547806e-03, -6.78810105e-03, -4.02930984e-03,\n",
-       "       -1.23974786e-03,  3.81971383e-03, -1.29524095e-03,  6.28382666e-03,\n",
-       "        7.76677998e-03, -6.41502626e-03], dtype=float32)"
+       "array([ 0.00775197, -0.00098355, -0.00680317,  0.00531398,  0.00027555,\n",
+       "       -0.00850526,  0.0004796 ,  0.00935341,  0.00794013,  0.00329453,\n",
+       "        0.00476364, -0.00069935,  0.00187854,  0.00922132, -0.00078149,\n",
+       "       -0.00691737,  0.00869222,  0.00307098, -0.00445781,  0.00080255,\n",
+       "       -0.00354484,  0.00139588, -0.00023506,  0.00503778,  0.00092166,\n",
+       "       -0.00481145, -0.00189991, -0.00507461,  0.00440452, -0.00636509,\n",
+       "       -0.00424659, -0.00227793,  0.00887942,  0.00591767,  0.00172376,\n",
+       "        0.00747316,  0.00620946, -0.00787641,  0.00187552,  0.00225828,\n",
+       "       -0.00270096, -0.00649132,  0.00458126,  0.00545853, -0.00804044,\n",
+       "        0.00731031,  0.00353879,  0.00965291, -0.00058632, -0.00515154],\n",
+       "      dtype=float32)"
       ]
      },
      "execution_count": 44,
@@ -1200,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1280,7 @@
        "4  [@] heard bitch way back th texa wtf talk bitc...      0.5185            1"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,11 +1310,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "data.to_csv(filepath, index = None, header = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save Labels as Numpy Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels_array = []\n",
+    "for row in range(0, len(data[\"tweet_class\"])):\n",
+    "    labels_array.append(data[\"tweet_class\"][row])\n",
+    "labels = np.asarray(labels_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saveFile(\"labels\", labels)"
    ]
   }
  ],
