--- a/Machine Learning Models.ipynb
+++ b/Machine Learning Models.ipynb
@@ -102,8 +102,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csvFile = \"stemmed_hate_speech\"\n",
+    "csvFile = \"binary_classification\"\n",
     "data = loadCSV(csvFile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unigram_array = \"feature_array_unigram.npy\"\n",
+    "bigram_array = \"feature_array_bigram.npy\"\n",
+    "tfidf_array = \"feature_array_tfidf.npy\"\n",
+    "wordvec_array = \"feature_array_word2vec.npy\"\n",
+    "unigram_reduced = \"reduced_unigram.npy\"\n",
+    "bigram_reduced = \"reduced_bigram.npy\"\n",
+    "tfidf_reduced = \"reduced_tfidf.npy\""
    ]
   },
   {
