cross validated machine learning

--- a/Machine Learning Models.ipynb
+++ b/Machine Learning Models.ipynb
@@ -88,12 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def genLabels():\n",
-    "    labels_array = []\n",
-    "    for row in range(0, len(data[\"tweet_class\"])):\n",
-    "        labels_array.append(data[\"tweet_class\"][row])\n",
-    "    labels = np.asarray(labels_array)\n",
-    "    return labels"
+    "def loadLabels():\n",
+    "    return loadNLPVectors(\"labels\")"
    ]
   },
   {
@@ -112,31 +108,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unigram_array = \"feature_array_unigram.npy\"\n",
-    "bigram_array = \"feature_array_bigram.npy\"\n",
-    "tfidf_array = \"feature_array_tfidf.npy\"\n",
-    "wordvec_array = \"feature_array_word2vec.npy\"\n",
-    "unigram_reduced = \"reduced_unigram.npy\"\n",
-    "bigram_reduced = \"reduced_bigram.npy\"\n",
-    "tfidf_reduced = \"reduced_tfidf.npy\""
+    "unigram_array = \"feature_array_unigram\"\n",
+    "bigram_array = \"feature_array_bigram\"\n",
+    "tfidf_array = \"feature_array_tfidf\"\n",
+    "wordvec_array = \"feature_array_word2vec\"\n",
+    "unigram_reduced = \"reduced_unigram\"\n",
+    "bigram_reduced = \"reduced_bigram\"\n",
+    "tfidf_reduced = \"reduced_tfidf\""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "word2vec = loadNLPVectors('feature_array_word2vec')"
+    "# Create Machine Learning Classifiers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
-    "word2vec_labels = genLabels()"
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.naive_bayes import MultinomialNB"
    ]
   },
   {
@@ -145,12 +153,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "X_train, X_test, y_train, y_test = train_test_split(word2vec, \n",
-    "                                                    word2vec_labels, \n",
-    "                                                    test_size = 0.2, \n",
-    "                                                    random_state = 42, \n",
-    "                                                    shuffle = True)"
+    "svm_clf = SVC(probability = True)\n",
+    "rf_clf = RandomForestClassifier()\n",
+    "log_clf = LogisticRegression()\n",
+    "lin_clf = LinearRegression()\n",
+    "nb_clf = MultinomialNB()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load NLP Data"
    ]
   },
   {
@@ -159,8 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.svm import SVC\n",
-    "svm_clf = SVC(probability = True, random_state = 42)"
+    "unigram = loadNLPVectors(unigram_array)"
    ]
   },
   {
@@ -169,48 +182,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv_results = cross_val_score(svm_clf, X_train, y_train, scoring = \"accuracy\", cv = 10, n_jobs = -1)"
+    "bigram = loadNLPVectors(bigram_array)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.51151631, 0.51151631, 0.5125    , 0.5125    , 0.5125    ,\n",
-       "       0.5125    , 0.5125    , 0.5125    , 0.5125    , 0.5125    ])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv_results"
+    "tfidf = loadNLPVectors(tfidf_array)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5123032629558542"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv_results.mean()"
+    "word2vec = loadNLPVectors(wordvec_array)"
    ]
   },
   {
@@ -219,34 +209,402 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "svm_model = svm_clf.fit(X_train, y_train)"
+    "reduced_unigram = loadNLPVectors(unigram_reduced)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_bigram = loadNLPVectors(bigram_reduced)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_tfidf = loadNLPVectors(tfidf_reduced)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = loadLabels()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cross Validation Function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.51455095, 0.328629  , 0.15682006],\n",
-       "       [0.5141496 , 0.32941481, 0.15643558],\n",
-       "       [0.51399339, 0.32948167, 0.15652493],\n",
-       "       ...,\n",
-       "       [0.51460124, 0.32923166, 0.1561671 ],\n",
-       "       [0.51427649, 0.3295108 , 0.15621271],\n",
-       "       [0.51421424, 0.32926606, 0.15651969]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "svm_model.predict_proba(X_test)"
+    "def crossValidate(classifiers, metric, nlp, folds):\n",
+    "    cv_results = []\n",
+    "    for clf in classifiers:\n",
+    "        clf_cv = cross_val_score(clf, nlp, labels, scoring = metric, cv = folds, n_jobs = -1)\n",
+    "        cv_results.append(clf_cv)\n",
+    "    return cv_results"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "classifiers - array containing which machine learning classifiers to be cross-validated\n",
+    "\n",
+    "metric - string identifying which scoring metric to be used\n",
+    "\n",
+    "nlp - feature array indicating which natural language processing schema to be used\n",
+    "\n",
+    "folds - number of folds to be cross-validated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_array = [svm_clf, rf_clf, log_clf, lin_clf, nb_clf]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = 'accuracy'\n",
+    "f1_score = 'f1'\n",
+    "roc_auc = 'roc_auc'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cross Validation - Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_unigram_results = crossValidate(clf_array, accuracy, unigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_bigram_results = crossValidate(clf_array, accuracy, bigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_tfidf_results = crossValidate(clf_array, accuracy, tfidf, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_wordvec_results = crossValidate(clf_array, accuracy, word2vec, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_red_unigram_results = crossValidate(clf_array, accuracy, reduced_unigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_red_bigram_results = crossValidate(clf_array, accuracy, reduced_bigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_red_tfidf_results = crossValidate(clf_array, accuracy, reduced_tfidf, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cross Validation - F1 Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_unigram_results = crossValidate(clf_array, f1_score, unigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_bigram_results = crossValidate(clf_array, f1_score, bigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_tfidf_results = crossValidate(clf_array, f1_score, tfidf, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_wordvec_results = crossValidate(clf_array, f1_score, word2vec, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_red_unigram_results = crossValidate(clf_array, f1_score, reduced_unigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_red_bigram_results = crossValidate(clf_array, f1_score, reduced_bigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_red_tfidf_results = crossValidate(clf_array, f1_score, reduced_tfidf, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cross Validation - ROC AUC Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ra_unigram_results = crossValidate(clf_array, roc_auc, unigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ra_bigram_results = crossValidate(clf_array, roc_auc, bigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ra_tfidf_results = crossValidate(clf_array, roc_auc, tfidf, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ra_wordvec_results = crossValidate(clf_array, roc_auc, word2vec, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ra_red_unigram_results = crossValidate(clf_array, roc_auc, reduced_unigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ra_red_bigram_results = crossValidate(clf_array, roc_auc, reduced_bigram, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ra_red_tfidf_results = crossValidate(clf_array, roc_auc, reduced_tfidf, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
