--- a/Machine Learning Models.ipynb
+++ b/Machine Learning Models.ipynb
@@ -81,16 +81,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.naive_bayes import MultinomialNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score"
    ]
   },
   {
@@ -153,11 +175,25 @@
     "        clf_array[i].fit(X_train, y_train)\n",
     "        end = time.time() - start\n",
     "        \n",
-    "        accuracy = clf_array[i].score(X_test, y_test)\n",
+    "        y_pred = clf_array[i].predict(X_test)\n",
     "        \n",
-    "        print(clf_names[i] + ': Done in ' + str(end))\n",
-    "        print(clf_names[i] + ' Accuracy: ' + str(accuracy))\n",
+    "        print(clf_names[i] + ': Completed in ' + str(end) + ' seconds')\n",
+    "        if clf_names[i] == 'Linear Regression':\n",
+    "            r2 = clf_array[i].score(X_test, y_test)\n",
+    "            print(clf_names[i] + ' R^2 Score: ' + str(r2))\n",
+    "        else:\n",
+    "            accuracy = accuracy_score(y_test, y_pred)\n",
+    "            roc_auc = roc_auc_score(y_test, y_pred)\n",
+    "            f_score = f1_score(y_test, y_pred)\n",
+    "            precision = precision_score(y_test, y_pred)\n",
+    "            recall = recall_score(y_test, y_pred)\n",
+    "            print(clf_names[i] + ' Accuracy: ' + str(accuracy))\n",
+    "            print(clf_names[i] + ' ROC AUC Score: ' + str(roc_auc))\n",
+    "            print(clf_names[i] + ' F Score: ' + str(f_score))\n",
+    "            print(clf_names[i] + ' Precision: ' + str(precision))\n",
+    "            print(clf_names[i] + ' Recall: ' + str(recall))\n",
     "        print(\" \")\n",
+    "        \n",
     "    return X_test, y_test"
    ]
   },
@@ -275,11 +311,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest: Done in 1.3732631206512451\n",
-      "Random Forest Accuracy: 0.8665897731641676\n",
+      "Random Forest: Completed in 1.3704018592834473 seconds\n",
+      "Random Forest Accuracy: 0.8673587081891581\n",
+      "Random Forest ROC AUC Score: 0.8659922209376764\n",
+      "Random Forest F Score: 0.8565488565488565\n",
+      "Random Forest Precision: 0.9050966608084359\n",
+      "Random Forest Recall: 0.8129439621152328\n",
       " \n",
-      "Logistic Regression: Done in 0.28240203857421875\n",
+      "Logistic Regression: Completed in 0.2952888011932373 seconds\n",
       "Logistic Regression Accuracy: 0.9015763168012303\n",
+      "Logistic Regression ROC AUC Score: 0.8997667701271701\n",
+      "Logistic Regression F Score: 0.8914334181509754\n",
+      "Logistic Regression Precision: 0.9633363886342805\n",
+      "Logistic Regression Recall: 0.829518547750592\n",
       " \n"
      ]
     },
@@ -295,11 +339,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Regression: Done in 0.337540864944458\n",
-      "Linear Regression Accuracy: 0.4933942699678997\n",
+      "Linear Regression: Completed in 0.24732017517089844 seconds\n",
+      "Linear Regression R^2 Score: 0.4933942699678997\n",
       " \n",
-      "SVM: Done in 181.7028021812439\n",
+      "SVM: Completed in 170.67447996139526 seconds\n",
       "SVM Accuracy: 0.6197616301422529\n",
+      "SVM ROC AUC Score: 0.6097277919840395\n",
+      "SVM F Score: 0.36069812540400775\n",
+      "SVM Precision: 0.9964285714285714\n",
+      "SVM Recall: 0.2202052091554854\n",
       " \n"
      ]
     }
@@ -333,17 +381,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest: Done in 1.3829059600830078\n",
-      "Random Forest Accuracy: 0.8738946559015763\n",
+      "Random Forest: Completed in 1.428300142288208 seconds\n",
+      "Random Forest Accuracy: 0.8696655132641292\n",
+      "Random Forest ROC AUC Score: 0.8682807372951251\n",
+      "Random Forest F Score: 0.8589263420724095\n",
+      "Random Forest Precision: 0.9084507042253521\n",
+      "Random Forest Recall: 0.8145224940805051\n",
       " \n",
-      "Logistic Regression: Done in 0.4620938301086426\n",
+      "Logistic Regression: Completed in 0.45800113677978516 seconds\n",
       "Logistic Regression Accuracy: 0.9115724721261054\n",
+      "Logistic Regression ROC AUC Score: 0.9101659706847445\n",
+      "Logistic Regression F Score: 0.9040867389491243\n",
+      "Logistic Regression Precision: 0.9584438549955792\n",
+      "Logistic Regression Recall: 0.8555643251775849\n",
       " \n",
-      "Linear Regression: Done in 0.202254056930542\n",
-      "Linear Regression Accuracy: 0.5372764672085395\n",
+      "Linear Regression: Completed in 0.2010180950164795 seconds\n",
+      "Linear Regression R^2 Score: 0.5372764672085395\n",
       " \n",
-      "SVM: Done in 105.80853796005249\n",
+      "SVM: Completed in 102.91931104660034 seconds\n",
       "SVM Accuracy: 0.8746635909265668\n",
+      "SVM ROC AUC Score: 0.8717658731802213\n",
+      "SVM F Score: 0.8551111111111112\n",
+      "SVM Precision: 0.9786368260427264\n",
+      "SVM Recall: 0.7592738752959748\n",
       " \n"
      ]
     }
@@ -377,17 +437,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest: Done in 2.2315099239349365\n",
-      "Random Forest Accuracy: 0.8489042675893888\n",
+      "Random Forest: Completed in 2.1718571186065674 seconds\n",
+      "Random Forest Accuracy: 0.8612072279892349\n",
+      "Random Forest ROC AUC Score: 0.859717733871817\n",
+      "Random Forest F Score: 0.849143334726285\n",
+      "Random Forest Precision: 0.9023090586145648\n",
+      "Random Forest Recall: 0.8018942383583267\n",
       " \n",
-      "Logistic Regression: Done in 1.2011420726776123\n",
+      "Logistic Regression: Completed in 1.2169358730316162 seconds\n",
       "Logistic Regression Accuracy: 0.9142637447135717\n",
+      "Logistic Regression ROC AUC Score: 0.913186066792965\n",
+      "Logistic Regression F Score: 0.9082682023858494\n",
+      "Logistic Regression Precision: 0.9484536082474226\n",
+      "Logistic Regression Recall: 0.8713496448303079\n",
       " \n",
-      "Linear Regression: Done in 0.9602310657501221\n",
-      "Linear Regression Accuracy: 0.5708337151892493\n",
+      "Linear Regression: Completed in 0.8626759052276611 seconds\n",
+      "Linear Regression R^2 Score: 0.5708337151892493\n",
       " \n",
-      "SVM: Done in 268.7503807544708\n",
+      "SVM: Completed in 262.4953439235687 seconds\n",
       "SVM Accuracy: 0.8469819300269127\n",
+      "SVM ROC AUC Score: 0.8432333754196304\n",
+      "SVM F Score: 0.8162511542012927\n",
+      "SVM Precision: 0.9833147942157954\n",
+      "SVM Recall: 0.6977111286503551\n",
       " \n"
      ]
     }
@@ -421,17 +493,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest: Done in 0.7857472896575928\n",
-      "Random Forest Accuracy: 0.5217224144559784\n",
+      "Random Forest: Completed in 0.8266351222991943 seconds\n",
+      "Random Forest Accuracy: 0.5151864667435602\n",
+      "Random Forest ROC AUC Score: 0.5119212295983027\n",
+      "Random Forest F Score: 0.4362986142154671\n",
+      "Random Forest Precision: 0.5030927835051546\n",
+      "Random Forest Recall: 0.3851617995264404\n",
       " \n",
-      "Logistic Regression: Done in 0.05181312561035156\n",
+      "Logistic Regression: Completed in 0.05595803260803223 seconds\n",
       "Logistic Regression Accuracy: 0.512879661668589\n",
+      "Logistic Regression ROC AUC Score: 0.5\n",
+      "Logistic Regression F Score: 0.0\n",
+      "Logistic Regression Precision: 0.0\n",
+      "Logistic Regression Recall: 0.0\n",
       " \n",
-      "Linear Regression: Done in 0.020402908325195312\n",
-      "Linear Regression Accuracy: -0.005723566339111308\n",
-      " \n",
-      "SVM: Done in 71.41576504707336\n",
+      "Linear Regression: Completed in 0.04768204689025879 seconds\n",
+      "Linear Regression R^2 Score: -0.005723566339111308\n",
+      " \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM: Completed in 71.16608691215515 seconds\n",
       "SVM Accuracy: 0.512879661668589\n",
+      "SVM ROC AUC Score: 0.5\n",
+      "SVM F Score: 0.0\n",
+      "SVM Precision: 0.0\n",
+      "SVM Recall: 0.0\n",
       " \n"
      ]
     }
@@ -465,14 +565,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest: Done in 12.994780778884888\n",
-      "Random Forest Accuracy: 0.9015763168012303\n",
+      "Random Forest: Completed in 12.608357906341553 seconds\n",
+      "Random Forest Accuracy: 0.8954248366013072\n",
+      "Random Forest ROC AUC Score: 0.8939085114112242\n",
+      "Random Forest F Score: 0.8860971524288107\n",
+      "Random Forest Precision: 0.943800178412132\n",
+      "Random Forest Recall: 0.835043409629045\n",
       " \n",
-      "Logistic Regression: Done in 0.23184800148010254\n",
+      "Logistic Regression: Completed in 0.22922515869140625 seconds\n",
       "Logistic Regression Accuracy: 0.9042675893886967\n",
+      "Logistic Regression ROC AUC Score: 0.9026283030544713\n",
+      "Logistic Regression F Score: 0.895157894736842\n",
+      "Logistic Regression Precision: 0.9593862815884476\n",
+      "Logistic Regression Recall: 0.8389897395422258\n",
       " \n",
-      "Naive Bayes: Done in 0.5647330284118652\n",
+      "Naive Bayes: Completed in 0.48565196990966797 seconds\n",
       "Naive Bayes Accuracy: 0.851595540176855\n",
+      "Naive Bayes ROC AUC Score: 0.8517744876575131\n",
+      "Naive Bayes F Score: 0.849336455893833\n",
+      "Naive Bayes Precision: 0.8401544401544402\n",
+      "Naive Bayes Recall: 0.8587213891081295\n",
       " \n"
      ]
     }
@@ -506,14 +618,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest: Done in 12.31935977935791\n",
-      "Random Forest Accuracy: 0.8965782391387928\n",
+      "Random Forest: Completed in 12.03729510307312 seconds\n",
+      "Random Forest Accuracy: 0.889273356401384\n",
+      "Random Forest ROC AUC Score: 0.8882286362738127\n",
+      "Random Forest F Score: 0.8817733990147782\n",
+      "Random Forest Precision: 0.9187339606501284\n",
+      "Random Forest Recall: 0.8476716653512234\n",
       " \n",
-      "Logistic Regression: Done in 1.5281178951263428\n",
+      "Logistic Regression: Completed in 1.489346981048584 seconds\n",
       "Logistic Regression Accuracy: 0.9154171472510573\n",
+      "Logistic Regression ROC AUC Score: 0.9144294269597639\n",
+      "Logistic Regression F Score: 0.9098360655737705\n",
+      "Logistic Regression Precision: 0.9462915601023018\n",
+      "Logistic Regression Recall: 0.8760852407261247\n",
       " \n",
-      "Naive Bayes: Done in 1.3956730365753174\n",
+      "Naive Bayes: Completed in 1.4319968223571777 seconds\n",
       "Naive Bayes Accuracy: 0.8650519031141869\n",
+      "Naive Bayes ROC AUC Score: 0.8655470015584157\n",
+      "Naive Bayes F Score: 0.8646355572695719\n",
+      "Naive Bayes Precision: 0.8453996983408748\n",
+      "Naive Bayes Recall: 0.8847671665351223\n",
       " \n"
      ]
     }
@@ -547,14 +671,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest: Done in 82.37594294548035\n",
-      "Random Forest Accuracy: 0.8935024990388312\n",
+      "Random Forest: Completed in 84.75579595565796 seconds\n",
+      "Random Forest Accuracy: 0.8904267589388697\n",
+      "Random Forest ROC AUC Score: 0.8889566661026235\n",
+      "Random Forest F Score: 0.880902632678646\n",
+      "Random Forest Precision: 0.9360568383658969\n",
+      "Random Forest Recall: 0.8318863456985004\n",
       " \n",
-      "Logistic Regression: Done in 29.032280683517456\n",
+      "Logistic Regression: Completed in 27.815634965896606 seconds\n",
       "Logistic Regression Accuracy: 0.9150326797385621\n",
+      "Logistic Regression ROC AUC Score: 0.9139356919803714\n",
+      "Logistic Regression F Score: 0.9090160559901194\n",
+      "Logistic Regression Precision: 0.9500860585197934\n",
+      "Logistic Regression Recall: 0.8713496448303079\n",
       " \n",
-      "Naive Bayes: Done in 28.650110006332397\n",
+      "Naive Bayes: Completed in 28.647745847702026 seconds\n",
       "Naive Bayes Accuracy: 0.8669742406766628\n",
+      "Naive Bayes ROC AUC Score: 0.8677580112863853\n",
+      "Naive Bayes F Score: 0.8680396643783371\n",
+      "Naive Bayes Precision: 0.8398523985239852\n",
+      "Naive Bayes Recall: 0.8981846882399369\n",
       " \n"
      ]
     }
