--- a/Unsupervised Machine Learning .ipynb
+++ b/Unsupervised Machine Learning .ipynb
@@ -5,7 +5,444 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loadNLPVectors(filename):\n",
+    "    file = 'nlp_data/' + filename + '.npy'\n",
+    "    return np.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loadLabels():\n",
+    "    return loadNLPVectors(\"labels\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "def genData(nlp):\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(nlp, labels,\n",
+    "                                                        test_size = 0.2,\n",
+    "                                                        random_state = 42,\n",
+    "                                                        shuffle = True,\n",
+    "                                                        stratify = labels)\n",
+    "    \n",
+    "    train = [X_train, y_train]\n",
+    "    test = [X_test, y_test]\n",
+    "    \n",
+    "    return train, test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load NLP Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unigram_array = \"feature_array_unigram\"\n",
+    "bigram_array = \"feature_array_bigram\"\n",
+    "tfidf_array = \"feature_array_tfidf\"\n",
+    "wordvec_array = \"feature_array_word2vec\"\n",
+    "unigram_reduced = \"reduced_unigram\"\n",
+    "bigram_reduced = \"reduced_bigram\"\n",
+    "tfidf_reduced = \"reduced_tfidf\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unigram = loadNLPVectors(unigram_array)\n",
+    "bigram = loadNLPVectors(bigram_array)\n",
+    "tfidf = loadNLPVectors(tfidf_array)\n",
+    "word2vec = loadNLPVectors(wordvec_array)\n",
+    "reduced_unigram = loadNLPVectors(unigram_reduced)\n",
+    "reduced_bigram = loadNLPVectors(bigram_reduced)\n",
+    "reduced_tfidf = loadNLPVectors(tfidf_reduced)\n",
+    "labels = loadLabels()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate Training and Testing Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_uni, test_uni = genData(unigram)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_big, test_big = genData(bigram)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_tfidf, test_tfidf = genData(tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_vec, test_vec = genData(word2vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_runi, test_runi = genData(reduced_unigram)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_rbig, test_rbig = genData(reduced_bigram)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_rtfidf, test_rtfidf = genData(reduced_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Means Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kCluster(train, verbose = 0):\n",
+    "    cluster = KMeans(n_clusters = 2, verbose = verbose)\n",
+    "    start = time.time()\n",
+    "    cluster.fit(train[0], train[1])\n",
+    "    end = time.time() - start\n",
+    "    print('Training Time: ' + str(end))\n",
+    "    return cluster"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate Clusters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def divideTestData(test):\n",
+    "    X = test[0]\n",
+    "    y = test[1]\n",
+    "    \n",
+    "    neutral_array = []\n",
+    "    hate_array = []\n",
+    "    \n",
+    "    for i in range(0, len(y)):\n",
+    "        if y[i] == 0:\n",
+    "            neutral_array.append(X[i])\n",
+    "        elif y[i] == 1:\n",
+    "            hate_array.append(X[i])\n",
+    "    \n",
+    "    neutral = np.asarray(neutral_array)\n",
+    "    hate = np.asarray(hate_array)\n",
+    "    \n",
+    "    return neutral, hate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getClusterAvg(cluster_pred):\n",
+    "    total = len(cluster_pred)\n",
+    "    count_0 = 0\n",
+    "    count_1 = 0\n",
+    "    for i in range(0, total):\n",
+    "        if cluster_pred[i] == 0:\n",
+    "            count_0 += 1\n",
+    "        elif cluster_pred[i] == 1:\n",
+    "            count_1 += 1\n",
+    "    \n",
+    "    cluster0 = count_0/total\n",
+    "    cluster1 = count_1/total\n",
+    "    \n",
+    "    return cluster0, cluster1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluateCluster(cluster, test):\n",
+    "    neutral, hate = divideTestData(test)\n",
+    "    \n",
+    "    neutral_pred = cluster.predict(neutral)\n",
+    "    hate_pred = cluster.predict(hate)\n",
+    "    \n",
+    "    nCluster0, nCluster1 = getClusterAvg(neutral_pred)\n",
+    "    hCluster0, hCluster1 = getClusterAvg(hate_pred)\n",
+    "    \n",
+    "    print(\"Neutral Cluster = 0: \" + str(nCluster0))\n",
+    "    print(\"Hate Cluster = 1:    \" + str(hCluster1))\n",
+    "    print(\" \")\n",
+    "    print(\"Neutral Cluster = 1: \" + str(nCluster1))\n",
+    "    print(\"Hate Cluster = 0:    \" + str(hCluster0))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reduced Unigram Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_runi = kCluster(train_runi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluateCluster(k_runi, test_runi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reduced Bigram Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_rbig = kCluster(train_rbig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluateCluster(k_rbig, test_rbig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reduced TFIDF Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_rtfidf = kCluster(train_rtfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluateCluster(k_rtfidf, test_rtfidf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Word2Vec Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_vec = kCluster(train_vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluateCluster(k_vec, test_vec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unigram Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_uni = kCluster(train_uni)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluateCluster(k_uni, test_uni)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bigram Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_big = kCluster(train_big)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluateCluster(k_big, test_big)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TFIDF Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_tfidf = kCluster(train_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluateCluster(k_tfidf, test_tfidf)"
+   ]
   }
  ],
  "metadata": {
