finished running unsupervised learning

--- a/Unsupervised Machine Learning .ipynb
+++ b/Unsupervised Machine Learning .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,18 +278,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 0.6534719467163086\n"
+     ]
+    }
+   ],
    "source": [
     "k_runi = kCluster(train_runi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.2983508245877061\n",
+      "Hate Cluster = 1:    0.856353591160221\n",
+      " \n",
+      "Neutral Cluster = 1: 0.7016491754122939\n",
+      "Hate Cluster = 0:    0.143646408839779\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_runi, test_runi)"
    ]
@@ -303,18 +323,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 1.6098639965057373\n"
+     ]
+    }
+   ],
    "source": [
     "k_rbig = kCluster(train_rbig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.7016491754122939\n",
+      "Hate Cluster = 1:    0.143646408839779\n",
+      " \n",
+      "Neutral Cluster = 1: 0.2983508245877061\n",
+      "Hate Cluster = 0:    0.856353591160221\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_rbig, test_rbig)"
    ]
@@ -328,18 +368,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 1.149717092514038\n"
+     ]
+    }
+   ],
    "source": [
     "k_rtfidf = kCluster(train_rtfidf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.0022488755622188904\n",
+      "Hate Cluster = 1:    0.6621941594317285\n",
+      " \n",
+      "Neutral Cluster = 1: 0.9977511244377811\n",
+      "Hate Cluster = 0:    0.3378058405682715\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_rtfidf, test_rtfidf)"
    ]
@@ -353,18 +413,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 0.8785572052001953\n"
+     ]
+    }
+   ],
    "source": [
     "k_vec = kCluster(train_vec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.4782608695652174\n",
+      "Hate Cluster = 1:    0.5169692186266772\n",
+      " \n",
+      "Neutral Cluster = 1: 0.5217391304347826\n",
+      "Hate Cluster = 0:    0.48303078137332284\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_vec, test_vec)"
    ]
@@ -378,18 +458,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 53.41338229179382\n"
+     ]
+    }
+   ],
    "source": [
     "k_uni = kCluster(train_uni)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.7016491754122939\n",
+      "Hate Cluster = 1:    0.143646408839779\n",
+      " \n",
+      "Neutral Cluster = 1: 0.2983508245877061\n",
+      "Hate Cluster = 0:    0.856353591160221\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_uni, test_uni)"
    ]
@@ -403,18 +503,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 2734.345181941986\n"
+     ]
+    }
+   ],
    "source": [
     "k_big = kCluster(train_big)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.7016491754122939\n",
+      "Hate Cluster = 1:    0.143646408839779\n",
+      " \n",
+      "Neutral Cluster = 1: 0.2983508245877061\n",
+      "Hate Cluster = 0:    0.856353591160221\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_big, test_big)"
    ]
@@ -428,18 +548,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 75.32064080238342\n"
+     ]
+    }
+   ],
    "source": [
     "k_tfidf = kCluster(train_tfidf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.9985007496251874\n",
+      "Hate Cluster = 1:    0.19889502762430938\n",
+      " \n",
+      "Neutral Cluster = 1: 0.0014992503748125937\n",
+      "Hate Cluster = 0:    0.8011049723756906\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_tfidf, test_tfidf)"
    ]
