fixed plot function

--- a/Neural Networks.ipynb
+++ b/Neural Networks.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plotLoss(hist, epoch_range):\n",
+    "def plotFigures(hist, epoch_range):\n",
     "    \n",
     "    validation_loss = hist.history['val_loss']\n",
     "    validation_acc = hist.history['val_accuracy']\n",
@@ -252,7 +252,7 @@
     "    print('Precision:      ', precision)\n",
     "    print('Recall:         ', recall)\n",
     "    \n",
-    "    plotLoss(history, epoch_range)"
+    "    plotFigures(history, epoch_range)"
    ]
   },
   {
